--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,10 +42,14 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.1'
     implementation 'com.android.support:design:27.0.1'
 
-    // InsanusMokrassar dependencies
+    // Github dependencies
     implementation ('com.github.insanusmokrassar:IObjectKRealisations:1.7.1', {
         exclude group: 'org.json', module: 'json'
     })
     implementation 'com.github.insanusmokrassar:IObjectK:1.5'
     implementation 'com.jjoe64:graphview:4.2.1'
+
+    // RX
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.5'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
 }
