--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ kotlin {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
@@ -39,15 +43,15 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
 
     // Frontend dependencies
-    implementation 'com.android.support:appcompat-v7:27.0.1'
-    implementation 'com.android.support:design:27.0.1'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
 
     // Github dependencies
-    implementation ('com.github.insanusmokrassar:IObjectKRealisations:1.7.1', {
+    implementation ('com.github.insanusmokrassar:IObjectKRealisations:1.8.2', {
         exclude group: 'org.json', module: 'json'
     })
-    implementation 'com.github.insanusmokrassar:IObjectK:1.5'
-    implementation 'com.jjoe64:graphview:4.2.1'
+    implementation 'com.github.insanusmokrassar:IObjectK:1.6'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
     // RX
     implementation 'io.reactivex.rxjava2:rxjava:2.1.5'
