--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ repositories {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -51,6 +51,7 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     })
     implementation 'com.github.insanusmokrassar:IObjectK:1.6'
+    implementation 'com.github.insanusmokrassar:CommonAndroidUtils:0.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
     // RX
