--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,18 +43,16 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
 
     // Frontend dependencies
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
+    implementation "com.android.support:appcompat-v7:$build_tools_version"
+    implementation "com.android.support:design:$build_tools_version"
 
     // Github dependencies
     implementation ('com.github.insanusmokrassar:IObjectKRealisations:1.8.2', {
         exclude group: 'org.json', module: 'json'
     })
-    implementation 'com.github.insanusmokrassar:IObjectK:1.6'
+    implementation 'com.github.insanusmokrassar:IObjectK:1.9'
     implementation 'com.github.insanusmokrassar:CommonAndroidUtils:0.1'
+    implementation 'com.github.insanusmokrassar:RecyclerViewAdapter:0.1'
+    implementation 'com.github.insanusmokrassar:SimpleAndroidORM:0.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-
-    // RX
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.5'
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
 }
