--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.10'
-    ext.kotlin_coroutines_version = '0.19.3'
+    ext.kotlin_version = '1.2.21'
+    ext.kotlin_coroutines_version = '0.22.2'
+    ext.build_tools_version = '27.0.1'
     
     repositories {
         mavenLocal()
